# TerminalCanvas

./: .gitignore  CHANGELOG.md  README.md  README.srt  example.py  setup.cfg
baeshade/: __init__.py  baeshade.py  baeshadeapp.py  baeshademath.py  baeshadeutil.py
examples/: BitmapExample.py  Draw2dExample.py  IoPerf.py  PaintExample.py  ShaderExample.py  ShaderExample2.py  SpriteExample.py  asyncioPerf.py  directDrawExample.py
