[metadata]
name = baeshade
version = 0.0.6
author = baesky
description = draw something in your terminal
long_description = file: README.srt
license = MIT
readme = README.md

[options]
package_dir=
    =.
packages = find:
zip_safe = False
python_requires = >= 3.8

[options.packages.find]
where = .
exclude =
    tests*
    examples*
    .gitignore